load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "syntax",
    srcs = [
        "error.go",
        "file.go",
        "node.go",
        "node_kind.go",
        "parser.go",
        "scanner.go",
        "token.go",
        "token_kind.go",
        "trivia.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/syntax",
    visibility = ["//visibility:public"],
)

go_test(
    name = "syntax_test",
    srcs = [
        "node_kind_test.go",
        "node_test.go",
        "parser_integration_test.go",
        "parser_test.go",
        "scanner_integration_test.go",
        "scanner_test.go",
        "token_kind_test.go",
        "token_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":syntax"],
)
