load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "validation",
    srcs = [
        "account.go",
        "balance.go",
        "custom.go",
        "doc.go",
        "errors.go",
        "options.go",
        "order.go",
        "pad.go",
        "txn.go",
        "validation.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/validation",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ast",
        "@com_github_cockroachdb_apd_v3//:apd",
    ],
)

go_test(
    name = "validation_test",
    srcs = [
        "account_test.go",
        "balance_test.go",
        "custom_test.go",
        "integration_test.go",
        "options_test.go",
        "order_test.go",
        "pad_test.go",
        "txn_test.go",
        "validation_options_test.go",
        "validation_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":validation"],
    deps = [
        "//pkg/ast",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
    ],
)
