load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "validation",
    srcs = [
        "doc.go",
        "errors.go",
        "from_inventory.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/validation",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ast",
        "//pkg/inventory",
    ],
)

go_test(
    name = "validation_test",
    srcs = ["integration_test.go"],
    data = glob(["testdata/**"]),
    deps = [
        ":validation",
        "//internal/options",
        "//pkg/ast",
        "//pkg/postproc/api",
        "//pkg/validation/balance",
        "//pkg/validation/pad",
        "//pkg/validation/validations",
    ],
)
