load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "beancompat",
    srcs = [
        "allowlist.go",
        "fixture.go",
        "match.go",
        "runner.go",
        "serialize.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/compat/beancompat",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ast",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
        "@rules_go//go/runfiles",
    ],
)

go_test(
    name = "beancompat_test",
    srcs = [
        "check_fixtures_test.go",
        "match_test.go",
        "parse_fixtures_test.go",
        "serialize_test.go",
    ],
    data = [
        "@beancompat//:check_fixtures",
        "@beancompat//:parse_fixtures",
    ],
    embed = [":beancompat"],
    gotags = ["beancompat_fixtures"],
    deps = [
        "//pkg/ast",
        "//pkg/loader",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
    ],
)
