load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:go_test file

go_library(
    name = "beancompat",
    srcs = [
        "denylist.go",
        "fixture.go",
        "match.go",
        "runner.go",
        "serialize.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/compat/beancompat",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ast",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
        "@rules_go//go/runfiles",
    ],
)

# The gotags = ["beancompat_fixtures"] attribute on the fixture test
# targets below activates the //go:build beancompat_fixtures constraint on
# the corresponding sources. The tag exists to keep `go test ./...` from
# loading these files (go test cannot fetch the @beancompat archive on its
# own); bazel test //... still exercises them because the gotag is set
# explicitly here. Do not remove the tag thinking it gates these targets
# from bazel — it does not.

go_test(
    name = "check_fixtures_test",
    size = "medium",  # keep
    srcs = ["check_fixtures_test.go"],
    data = ["@beancompat//:check_fixtures"],  # keep
    embed = [":beancompat"],
    gotags = ["beancompat_fixtures"],  # keep
    deps = ["//pkg/loader"],
)

go_test(
    name = "match_test",
    size = "small",  # keep
    srcs = ["match_test.go"],
    embed = [":beancompat"],
)

go_test(
    name = "parse_fixtures_test",
    size = "medium",  # keep
    srcs = ["parse_fixtures_test.go"],
    data = ["@beancompat//:parse_fixtures"],  # keep
    embed = [":beancompat"],
    gotags = ["beancompat_fixtures"],  # keep
    deps = ["//pkg/ast"],
)

go_test(
    name = "serialize_test",
    size = "small",  # keep
    srcs = ["serialize_test.go"],
    embed = [":beancompat"],
    deps = [
        "//pkg/ast",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
    ],
)
