load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "comment",
    srcs = [
        "comment.go",
        "doc.go",
        "emit.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/distribute/comment",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ast",
        "//pkg/printer",
    ],
)

go_test(
    name = "comment_test",
    srcs = ["comment_test.go"],
    embed = [":comment"],
    deps = [
        "//pkg/ast",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
