load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dedup",
    srcs = [
        "dedup.go",
        "equality.go",
    ],
    importpath = "github.com/yugui/go-beancount/pkg/distribute/dedup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ast",
        "//pkg/distribute/comment",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_x_text//unicode/norm",
    ],
)

go_test(
    name = "dedup_test",
    srcs = ["dedup_test.go"],
    embed = [":dedup"],
    deps = [
        "//pkg/ast",
        "@com_github_cockroachdb_apd_v3//:apd",
        "@org_golang_x_text//unicode/norm",
    ],
)
